# nutrition-rag

./: .gitignore  Dockerfile  LICENSE  README.md  parameters.toml  pyproject.toml
data/eval/: test_questions_raw.csv
prompts/: llm_system_prompt.txt  llm_system_prompt_justanswers.txt
src/nutritionrag/: eval.ipynb  eval_question_answer_similarity.ipynb  preprocessing.py  rag_pipeline.py
src/streamlit/: app.py
